--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ advent-of-code-data = "^1.1.1"
 parse = "^1.19.0"
 numpy = "^1.21.4"
 colorama = "^0.4.4"
+pandas = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
